# ROI-Extraction-in-Thermographic-Breast-Images-Using-Genetic-Algorithms

./: .gitignore  GA.py  GATIS.rar  README.md  cardioid.py  go.work  individual.py  test.py  todo.md
C++/: Cardioid.cpp  Cardioid.hpp  GA.cpp  GA.hpp  Helper.hpp  Individual.cpp  Individual.hpp  Makefile  main.cpp
Go/: Makefile  go.mod  go.work  main.go
Go/GA/: GA.go  go.mod
Go/cardioid/: cardioid.go  cardioid_test.go  go.mod
Go/coordinate/: coordinate.go  coordinate_test.go  go.mod
Go/gencsv/: gencsv.go  go.mod
Go/individual/: go.mod  individual.go  individual_test.go
Java/: .classpath  .project  README.md
Java/doc/: allclasses-index.html  allpackages-index.html  deprecated-list.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  type-search-index.js
Java/src/: module-info.java
cpp/: CMakeCache.txt  CMakeLists.txt  Cardioid.cpp  Cardioid.hpp  Coordinate.cpp  Coordinate.hpp  GA.cpp  GA.hpp  Individual.cpp  Individual.hpp  Makefile  cmake_install.cmake
doc/: constant-values.html  element-list  help-doc.html  index.html  serialized-form.html
doc/charts/: ChartFromFile.html  package-tree.html
doc/dicom/: Dicom.html  PixelDataMap.html  package-tree.html
doc/distances/: ChebyshevDistance.html  Distance.html  EuclideanDistance.html  MinkowskiDistance.html  package-use.html
doc/filters/: Filter.html  package-summary.html  package-use.html
doc/image/: Image.BoundaryOperationType.html  Image.InterpolationType.html  ImageDisplay.html  (+3 more)
python/: GA.py  cardioid.py  test.py  todo.md
src/: module-info.java
(+224 files in other folders)
